[metadata]
name = g09-output
version = 2.2.0
author = Leo Tsui
author_email = drleotsui@gmail.com
description = Extract data from gaussian09 output file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hcltsui/g09-output
project_urls =
    Bug Tracker = https://github.com/hcltsui/g09-output/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
packages = 
    g09_output
	g09_output.opt
	g09_output.polar
package_dir =
    = src
install_requires =
    numpy
	pandas
python_requires = >=3.7

[options.entry_points]
console_scripts =
    g09-opt = g09_output.opt.__main__:main
	g09-polar = g09_output.polar.__main__:main